--- a/pseudo.css
+++ b/pseudo.css
@@ -1,15 +1,26 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
 
-  header {
-    background-color: #f2f2f2;
-    padding: 20px;
-    text-align: center;
-  }
+header {
+  background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+}
 
-  main {
-    padding: 20px;
-  }
+main {
+  padding: 20px;
+}
+
+p.pengar::after {
+  content: ' dollares';
+}
+p.pengar::before {
+  content: '§';
+}
+p::selection {
+  background-color: #f2f2f2;
+  color: white;
+}   
